// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hostGenerator > bundler=webpack > should generate host files and configs for SSR 1`] = `
"const { NxAppWebpackPlugin } = require('@nx/webpack/app-plugin');
const { NxReactWebpackPlugin } = require('@nx/react/webpack-plugin');
const { withModuleFederationForSSR } = require('@nx/module-federation/webpack');

const baseConfig = require('./module-federation.config');

const defaultConfig = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support for Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
module.exports = async () => {
  const configureFederation = await withModuleFederationForSSR(defaultConfig, { dts: false });
  const webpackConfig = configureFederation({
    mode:
      process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
        ? process.env.NODE_ENV
        : 'none',
    entry: {},
    output: { library: { type: 'commonjs' } },
    plugins: [],
  });
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  const target = webpackConfig.target;
  webpackConfig.plugins.unshift(new NxAppWebpackPlugin({ ssr: true }), new NxReactWebpackPlugin(), {
    apply(compiler) {
      if (runtimeChunk !== undefined) {
        compiler.options.optimization.runtimeChunk = runtimeChunk;
      }
      compiler.options.target = target;
    },
  });
  return webpackConfig;
};
"
`;

exports[`hostGenerator > bundler=webpack > should generate host files and configs for SSR 2`] = `
"// @ts-check

/**
 * @type {import('@nx/module-federation').ModuleFederationConfig}
 **/
const moduleFederationConfig = {
  name: 'test',
  remotes: [],
};

/**
 * Nx requires a default export of the config to allow correct resolution of the module federation graph.
 **/
module.exports = moduleFederationConfig;
"
`;

exports[`hostGenerator > bundler=webpack > should generate host files and configs for SSR when --typescriptConfiguration=true 1`] = `
"import { NxAppWebpackPlugin } from '@nx/webpack/app-plugin';
import type { Compiler } from 'webpack';
import { NxReactWebpackPlugin } from '@nx/react/webpack-plugin';
import { withModuleFederationForSSR } from '@nx/module-federation/webpack';

import baseConfig from './module-federation.config';

const defaultConfig = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support for Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
export default async () => {
  const configureFederation = await withModuleFederationForSSR(defaultConfig, { dts: false });
  const webpackConfig = configureFederation({
    mode:
      process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
        ? process.env.NODE_ENV
        : 'none',
    entry: {},
    output: { library: { type: 'commonjs' } },
    plugins: [],
  });
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  const target = webpackConfig.target;
  webpackConfig.plugins.unshift(new NxAppWebpackPlugin({ ssr: true }), new NxReactWebpackPlugin(), {
    apply(compiler: Compiler) {
      if (runtimeChunk !== undefined) {
        compiler.options.optimization.runtimeChunk = runtimeChunk;
      }
      compiler.options.target = target;
    },
  });
  return webpackConfig;
};
"
`;

exports[`hostGenerator > bundler=webpack > should generate host files and configs for SSR when --typescriptConfiguration=true 2`] = `
"import type { ModuleFederationConfig } from '@nx/module-federation';

const config: ModuleFederationConfig = {
  name: 'test',
  remotes: [],
};

/**
 * Nx requires a default export of the config to allow correct resolution of the module federation graph.
 **/
export default config;
"
`;

exports[`hostGenerator > bundler=webpack > should generate host files and configs when --typescriptConfiguration=false 1`] = `
"const { NxAppWebpackPlugin } = require('@nx/webpack/app-plugin');
const { NxReactWebpackPlugin } = require('@nx/react/webpack-plugin');
const { withModuleFederation } = require('@nx/module-federation/webpack');

const baseConfig = require('./module-federation.config');

const config = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support for Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
module.exports = async () => {
  const configureFederation = await withModuleFederation(config, { dts: false });
  const webpackConfig = configureFederation(
    {
      mode:
        process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
          ? process.env.NODE_ENV
          : 'none',
      output: {},
      plugins: [],
    },
    undefined,
  );
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  webpackConfig.plugins.unshift(new NxAppWebpackPlugin(), new NxReactWebpackPlugin(), {
    apply(compiler) {
      if (runtimeChunk !== undefined) {
        compiler.options.optimization.runtimeChunk = runtimeChunk;
      }
    },
  });
  return webpackConfig;
};
"
`;

exports[`hostGenerator > bundler=webpack > should generate host files and configs when --typescriptConfiguration=false 2`] = `
"/**
 * Nx requires a default export of the config to allow correct resolution of the module federation graph.
 **/
module.exports = {
  name: 'test',
  /**
   * To use a remote that does not exist in your current Nx Workspace
   * You can use the tuple-syntax to define your remote
   *
   * remotes: [['my-external-remote', 'https://nx-angular-remote.netlify.app']]
   *
   * You _may_ need to add a \`remotes.d.ts\` file to your \`src/\` folder declaring the external remote for tsc, with the
   * following content:
   *
   * declare module 'my-external-remote';
   *
   */
  remotes: [],
};
"
`;

exports[`hostGenerator > bundler=webpack > should generate host files and configs when --typescriptConfiguration=true 1`] = `
"import { NxAppWebpackPlugin } from '@nx/webpack/app-plugin';
import type { Compiler } from 'webpack';
import { NxReactWebpackPlugin } from '@nx/react/webpack-plugin';
import {withModuleFederation} from '@nx/module-federation/webpack';
import type { ModuleFederationConfig } from '@nx/module-federation';

import baseConfig from './module-federation.config';

const config: ModuleFederationConfig = {
  ...baseConfig,
};

/**
 * DTS Plugin is disabled in Nx Workspaces as Nx already provides Typing support for Module Federation
 * The DTS Plugin can be enabled by setting dts: true
 * Learn more about the DTS Plugin here: https://module-federation.io/configure/dts.html
 */
export default async () => {
  const configureFederation = await withModuleFederation(config, { dts: false });
  const webpackConfig = configureFederation({
    mode: process.env.NODE_ENV === 'development' || process.env.NODE_ENV === 'production'
      ? process.env.NODE_ENV
      : 'none',
    output: {},
    plugins: [],
  }, undefined);
  const runtimeChunk = webpackConfig.optimization?.runtimeChunk;
  webpackConfig.plugins.unshift(
    new NxAppWebpackPlugin(),
    new NxReactWebpackPlugin(),
    {
      apply(compiler: Compiler) {
        if (runtimeChunk !== undefined) {
          compiler.options.optimization.runtimeChunk = runtimeChunk;
        }
      },
    },
  );
  return webpackConfig;
};
"
`;

exports[`hostGenerator > bundler=webpack > should generate host files and configs when --typescriptConfiguration=true 2`] = `
"import type { ModuleFederationConfig } from '@nx/module-federation';

const config: ModuleFederationConfig = {
  name: 'test',
  /**
    * To use a remote that does not exist in your current Nx Workspace
    * You can use the tuple-syntax to define your remote
    *
    * remotes: [['my-external-remote', 'https://nx-angular-remote.netlify.app']]
    *
    * You _may_ need to add a \`remotes.d.ts\` file to your \`src/\` folder declaring the external remote for tsc, with the
    * following content:
    *
    * declare module 'my-external-remote';
    *
    */
  remotes: [
  ],
};

/**
* Nx requires a default export of the config to allow correct resolution of the module federation graph.
**/
export default config;
"
`;
